--- a/Bookswagon/App.config
+++ b/Bookswagon/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-</configuration>
+
+	<appSettings>
+		<add key="URL" value="https://www.bookswagon.com"/>
+		<add key="JSON" value="C:\\Users\\HP\\source\\data\\Credentials.json"/>
+	</appSettings>
+	</configuration>
