--- a/Bookswagon/packages.config
+++ b/Bookswagon/packages.config
@@ -7,4 +7,8 @@
   <package id="Selenium.Chrome.WebDriver" version="83.0.0" targetFramework="net472" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="4.7.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
 </packages>
