--- a/Bookswagon/Bookswagon.csproj
+++ b/Bookswagon/Bookswagon.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Data\UserData.cs" />
     <Compile Include="Page\BookSearch.cs" />
     <Compile Include="Page\Login.cs" />
+    <Compile Include="Page\MyCart.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\BookswagonHome.cs" />
