--- a/Bookswagon/App.config
+++ b/Bookswagon/App.config
@@ -1,5 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+
+	<configSections>
+		<section name="log4net"
+		type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+	</configSections>
+	<log4net>
+		<appender name="TestAppender"
+
+		type="log4net.Appender.RollingFileAppender" >
+			<file value="C:\Users\HP\source\repos\Bookswagon\Bookswagon\Reports\Books.log" />
+			<encoding value="utf-8" />
+			<appendToFile value="true" />
+			<rollingStyle value="Date" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date %level [%thread] %type.%method - %message%n" />
+			</layout>
+		</appender>
+		<root>
+			<level value="All" />
+			<appender-ref ref="TestAppender" />
+		</root>
+	</log4net>
+	
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
@@ -13,37 +36,7 @@
 		<add key="City" value="Srikakulam"/>
 		<add key="Pin" value="532312"/>
 		<add key="Mobile" value="9542030759"/>
+		<add key="Path" value="C:\\Users\\HP\\source\\repos\\Bookswagon\\Bookswagon\\Reports\\Reports.html"/>
 	</appSettings>
-	  <runtime>
-	     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-	        <dependentAssembly>
-	           <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-	           <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
-	        </dependentAssembly>
-	        <dependentAssembly>
-	           <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-	           <bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0" />
-	        </dependentAssembly>
-	        <dependentAssembly>
-	           <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-	           <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
-	        </dependentAssembly>
-	        <dependentAssembly>
-	           <assemblyIdentity name="System.Security.Principal.Windows" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-	           <bindingRedirect oldVersion="0.0.0.0-4.1.3.0" newVersion="4.1.3.0" />
-	        </dependentAssembly>
-	        <dependentAssembly>
-	           <assemblyIdentity name="System.Security.Cryptography.Cng" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-	           <bindingRedirect oldVersion="0.0.0.0-4.3.1.0" newVersion="4.3.1.0" />
-	        </dependentAssembly>
-	        <dependentAssembly>
-	           <assemblyIdentity name="System.Reflection.Metadata" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-	           <bindingRedirect oldVersion="0.0.0.0-1.4.3.0" newVersion="1.4.3.0" />
-	        </dependentAssembly>
-	        <dependentAssembly>
-	           <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-	           <bindingRedirect oldVersion="0.0.0.0-1.2.3.0" newVersion="1.2.3.0" />
-	        </dependentAssembly>
-	     </assemblyBinding>
-	  </runtime>
+	
 </configuration>
