--- a/Bookswagon/App.config
+++ b/Bookswagon/App.config
@@ -36,7 +36,7 @@
 		<add key="City" value="Srikakulam"/>
 		<add key="Pin" value="532312"/>
 		<add key="Mobile" value="9542030759"/>
-		<add key="Path" value="C:\\Users\\HP\\source\\repos\\Bookswagon\\Bookswagon\\Reports\\Reports.html"/>
+		<add key="Path" value="C:\\Users\\HP\\source\\repos\\Bookswagon\\Bookswagon\\Reports\\index.html"/>
 	</appSettings>
 	
 </configuration>
