--- a/Bookswagon/Bookswagon.csproj
+++ b/Bookswagon/Bookswagon.csproj
@@ -453,6 +453,7 @@
   <ItemGroup>
     <Compile Include="Base\BooksWagon.cs" />
     <Compile Include="Data\UserData.cs" />
+    <Compile Include="Email\Mailing.cs" />
     <Compile Include="Exception\Bookswagonexception.cs" />
     <Compile Include="Page\Address.cs" />
     <Compile Include="Page\BookSearch.cs" />
@@ -460,6 +461,7 @@
     <Compile Include="Page\MyCart.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screenshots.cs" />
     <Compile Include="Test\BookswagonHome.cs" />
   </ItemGroup>
   <ItemGroup>
