--- a/Bookswagon/Bookswagon.csproj
+++ b/Bookswagon/Bookswagon.csproj
@@ -453,7 +453,7 @@
   <ItemGroup>
     <Compile Include="Base\BooksWagon.cs" />
     <Compile Include="Data\UserData.cs" />
-    <Compile Include="Email\Mailing.cs" />
+    <Compile Include="Utility\Mailing.cs" />
     <Compile Include="Exception\Bookswagonexception.cs" />
     <Compile Include="Page\Address.cs" />
     <Compile Include="Page\BookSearch.cs" />
@@ -461,7 +461,7 @@
     <Compile Include="Page\MyCart.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Screenshots.cs" />
+    <Compile Include="Utility\Screenshots.cs" />
     <Compile Include="Test\BookswagonHome.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -474,6 +474,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Reports\" />
+    <Folder Include="Screenshot Photos\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.Chrome.WebDriver.83.0.0\build\Selenium.Chrome.WebDriver.targets" Condition="Exists('..\packages\Selenium.Chrome.WebDriver.83.0.0\build\Selenium.Chrome.WebDriver.targets')" />
