Modified the code with proper naming conventions and indentations

--- a/Bookswagon/App.config
+++ b/Bookswagon/App.config
@@ -2,14 +2,11 @@
 <configuration>
 
 	<configSections>
-		<section name="log4net"
-		type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
 	</configSections>
 	<log4net>
-		<appender name="TestAppender"
-
-		type="log4net.Appender.RollingFileAppender" >
-			<file value="C:\Users\HP\source\repos\Bookswagon\Bookswagon\Reports\Books.log" />
+		<appender name="TestAppender" type="log4net.Appender.RollingFileAppender">
+			<file value="C:\Users\HP\source\repos\Bookswagon\Bookswagon\Reports\Books.txt" />
 			<encoding value="utf-8" />
 			<appendToFile value="true" />
 			<rollingStyle value="Date" />
@@ -30,13 +27,76 @@
 	<appSettings>
 		<add key="URL" value="https://www.bookswagon.com" />
 		<add key="JSON" value="C:\\Users\\HP\\source\\data\\Credentials.json" />
-		<add key="Name" value="Rajesh Kumar Roulo"/>
-		<add key="Company" value="Bridgelabz"/>
-		<add key="Address" value="Keadripuram village, via Ichapuram "/>
-		<add key="City" value="Srikakulam"/>
-		<add key="Pin" value="532312"/>
-		<add key="Mobile" value="9542030759"/>
-		<add key="Path" value="C:\\Users\\HP\\source\\repos\\Bookswagon\\Bookswagon\\Reports\\index.html"/>
+		<add key="Name" value="Rajesh Kumar Roulo" />
+		<add key="Company" value="Bridgelabz" />
+		<add key="Address" value="Keadripuram village, via Ichapuram " />
+		<add key="City" value="Srikakulam" />
+		<add key="Pin" value="532312" />
+		<add key="Mobile" value="9542030759" />
+		<add key="Path" value="C:\\Users\\HP\\source\\repos\\Bookswagon\\Bookswagon\\Reports\\index.html" />
 	</appSettings>
 	
+  <runtime>
+	
+      <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+	
+          <dependentAssembly>
+	
+              <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+	
+              <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+	
+          </dependentAssembly>
+	
+          <dependentAssembly>
+	
+              <assemblyIdentity name="System.Security.Principal.Windows" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+	
+              <bindingRedirect oldVersion="0.0.0.0-4.1.3.0" newVersion="4.1.3.0" />
+	
+          </dependentAssembly>
+	
+          <dependentAssembly>
+	
+              <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+	
+              <bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0" />
+	
+          </dependentAssembly>
+	
+          <dependentAssembly>
+	
+              <assemblyIdentity name="System.Security.Cryptography.Cng" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+	
+              <bindingRedirect oldVersion="0.0.0.0-4.3.1.0" newVersion="4.3.1.0" />
+	
+          </dependentAssembly>
+	
+          <dependentAssembly>
+	
+              <assemblyIdentity name="System.Reflection.Metadata" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+	
+              <bindingRedirect oldVersion="0.0.0.0-1.4.3.0" newVersion="1.4.3.0" />
+	
+          </dependentAssembly>
+	
+          <dependentAssembly>
+	
+              <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+	
+              <bindingRedirect oldVersion="0.0.0.0-1.2.3.0" newVersion="1.2.3.0" />
+	
+          </dependentAssembly>
+	
+          <dependentAssembly>
+	
+              <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+	
+              <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+	
+          </dependentAssembly>
+	
+      </assemblyBinding>
+	
+  </runtime>
 </configuration>
