--- a/Bookswagon/packages.config
+++ b/Bookswagon/packages.config
@@ -74,6 +74,7 @@
   <package id="Selenium.Chrome.WebDriver" version="83.0.0" targetFramework="net472" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver.GeckoDriver" version="0.27.0" targetFramework="net472" />
   <package id="SharpCompress" version="0.23.0" targetFramework="net472" />
   <package id="Snappy.NET" version="1.1.1.8" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
