--- a/Bookswagon/App.config
+++ b/Bookswagon/App.config
@@ -27,6 +27,7 @@
 	<appSettings>
 		<add key="URL" value="https://www.bookswagon.com" />
 		<add key="JSON" value="C:\\Users\\HP\\source\\data\\Credentials.json" />
+		<add key="BookName" value="Wings of fire" />
 		<add key="Name" value="Rajesh Kumar Roulo" />
 		<add key="Company" value="Bridgelabz" />
 		<add key="Address" value="Keadripuram village, via Ichapuram " />
